# EagleDaddyHub

./: .env  .gitignore  Cargo.toml  README.md  config.txt  config.yml  dhcpcd.conf  docker-compose.yml  hub_setup.sh  initial_setup.sh  manage.py  requirements.txt  setup.py  shutdown_signal_eagledaddy.service  wait_for_shutdown_signal.sh
eagle_daddy/: .modules  Cargo.toml  README.md
eagle_daddy/src/: console.rs  main.rs  manager.rs  modules.rs  prelude.rs
eagledaddy/: asgi.py  settings.py  urls.py  wsgi.py
host/src/: api.rs  main.rs  prelude.rs
legacy/eagle_daddy/: .modules  Cargo.toml
legacy/eagle_daddy/src/: main.rs  manager.rs  test_modules.rs
modules/: README.md
modules/prototype_module/: globals.h  prototype_module.ino
modules/prototypes/: prototype_sensor.ino
pydaddy/: apps.py  comms.py  config.yaml  errors.py  hub.py  models.py  proxy.py  requirements.txt  setup.py  utils.py
pydaddy/pydaddy/: hub.py
pydaddy/pydaddy/db/: __init__.py  models.py  proxy.py
rustbee/: Cargo.toml
rustbee/src/: api.rs  device.rs
src/: api.rs  atcommands.rs  main.rs  prelude.rs
