[package]
name = "eagledaddy"
version = "0.1.0"
authors = ["duysPES <duys@pioneeres.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustbee = {path = "../rustbee"}
lazy_static = "1.4.0"
downcast-rs = "^1.1"
serde_yaml = "0.8"
serde = {version = "^1.0", features=["derive"]}
bytes = "^0.5"

